# articles-code

./: .gitignore  .gitmodules  README.md
articles/computer_vision/deep_learning_model_optimization_pipeline/: .env.default  README.md
articles/computer_vision/deep_learning_model_optimization_pipeline/object_detectors/: helpers.py
articles/computer_vision/deploy_deep_learning_at_scale_nvidia_triton_server/: docker-compose.triton.yaml
articles/computer_vision/real_time_deep_learning_on_video/: .gitignore  Makefile  README.md  pyproject.toml
articles/computer_vision/real_time_deep_learning_on_video/api/: app.py  run.py
articles/computer_vision/real_time_deep_learning_on_video/api/routers/: __init__.py  http.py  webrtc.py  ws.py
articles/computer_vision/real_time_deep_learning_on_video/client/: package-lock.json  package.json
articles/computer_vision/real_time_deep_learning_on_video/client/src/: App.js  video_http.js  video_webrtc.js  video_websocket.js
articles/computer_vision/real_time_deep_learning_on_video/client/src/components/: HTTPStreamer.js  HomePage.js  WEBRTCStreamer.js  WSStreamer.js  common.js
articles/generative_ai/data_extraction_from_social_media_posts_using_llms/: .dockerignore  .env.exmaple  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
articles/generative_ai/data_extraction_from_social_media_posts_using_llms/src/: config.py  crawler.py  db.py  llm.py  main.py  report_generator.py  schemas.py  templates.py
articles/generative_ai/diffusion_models_fundamentals/: .env.example  Diffusion_Inference.ipynb  Diffusion_Training.ipynb  Makefile  README.md  config.py  config.yaml  main.py  pyproject.toml
articles/generative_ai/diffusion_models_fundamentals/data/: data_handler.py
articles/generative_ai/diffusion_models_fundamentals/model/: __init__.py  diffusion_model.py
articles/generative_ai/diffusion_models_fundamentals/src/: config.py  inference.py  train.py
articles/generative_ai/diffusion_models_fundamentals/src/data/: __init__.py  data_handler.py
articles/generative_ai/diffusion_models_fundamentals/src/inference/: __init__.py  inference.py
articles/generative_ai/diffusion_models_fundamentals/src/model/: __init__.py  diffusion_model.py
articles/generative_ai/diffusion_models_fundamentals/src/training/: trainer.py
articles/generative_ai/diffusion_models_fundamentals/src/utils/: __init__.py  helper.py
articles/generative_ai/diffusion_models_fundamentals/training/: trainer.py
articles/generative_ai/diffusion_models_fundamentals/utils/: __init__.py
articles/large_language_models/multi-replica-endpoints-sagemaker-deployment/: README.md
articles/large_language_models/multi-replica-endpoints-sagemaker-deployment/src/: delete_sagemaker_resources.py  interfaces.py  run.py  service.py  settings.py  strategy.py
articles/large_language_models/multi_replica_endpoints_sagemaker_deployment/: .env.example  README.md  pyproject.toml
articles/large_language_models/multi_replica_endpoints_sagemaker_deployment/src/: aws_auth.py  run.py  utils.py
articles/large_language_models/real_time_retrieval_system_for_social_media_data/: Makefile  README.md  retrieve.ipynb
articles/large_language_models/real_time_retrieval_system_for_social_media_data/src/: cleaning.py  embeddings.py  (+3 more)
articles/machine_learning_engineering/experimental_trackers_efficiency_gradio_vs_wandb_training_diffusion_models/: Diffusion_Model_Training_Gradio.ipynb  Diffusion_Model_Training_Wandb.ipynb  README.md
articles/ml_system_design/highly_scalable_data_ingestion_architecture_for_marketing_intelligence/: .dockerignore  .env.example  Dockerfile  Makefile  docker-compose.yml  pyproject.toml
articles/ml_system_design/highly_scalable_data_ingestion_architecture_for_marketing_intelligence/ops/: Pulumi.yaml  index.ts  package-lock.json  package.json
articles/ml_system_design/highly_scalable_data_ingestion_architecture_for_marketing_intelligence/ops/components/: docdb.ts
articles/ml_system_design/highly_scalable_data_ingestion_architecture_for_marketing_intelligence/src/: constants.py  crawler.py  db.py  proxy.py  scheduler.py  schemas.py  templates.py  utils.py
articles/ml_system_design/highly_scalable_data_ingestion_architecture_for_marketing_intelligence/src/crawlers/: __init__.py  base.py  instagram.py
articles/ml_system_design/real_time_news_search_using_upstash_kafka_and_vector/: Makefile
articles/ml_system_design/real_time_news_search_with_upstash_kafka_and_vector_db/: .env.default  Makefile  README.md  ui.py
articles/ml_system_design/real_time_news_search_with_upstash_kafka_and_vector_db/upstash_ingest/: pyproject.toml
articles/ml_system_design/real_time_news_search_with_upstash_kafka_and_vector_db/upstash_ingest/tests/: test_fetch.py  test_models.py
articles/ml_system_design/real_time_news_search_with_upstash_kafka_and_vector_db/upstash_ingest/upstash_ingest/: cleaners.py  consumer.py  flow.py  models.py  settings.py  tools.py  ui.py  vector.py
computer_vision/deep_learning_model_optimization_pipeline/: blueprint.json
computer_vision/deploy_deep_learning_at_scale_nvidia_triton_server/: Makefile
cvision/deep_learning_model_optimization_pipeline/: Makefile  README.md  pyproject.toml
cvision/deep_learning_model_optimization_pipeline/object_detectors/: modelinfo.py  pt2trt.py
cvision/deploy_deep_learning_at_scale_nvidia_triton_server/: README.md  pyproject.toml
cvision/deploy_deep_learning_at_scale_nvidia_triton_server/src/: client.py  tools.py
large_language_models/real_time_retrieval_system_for_social_media_data/: pyproject.toml
large_language_models/real_time_retrieval_system_for_social_media_data/data/: paul.json
large_language_models/real_time_retrieval_system_for_social_media_data/src/: models.py  qdrant.py
llms/real_time_retrieval_system_for_social_media_data/: .env.example  README.md  ingest.py
llms/real_time_retrieval_system_for_social_media_data/src/: __init__.py  base.py  json_source.py
templates/{article_template}/: .gitignore  README.md
{article_template}/: Makefile  README.md
(+30 files in other folders)
