[tool.poetry]
name = "deep_learning_model_optimization_pipeline"
version = "0.1.0"
description = "A pipeline to convert .pt to .engine YOLO models"
authors = ["Joywalker <alexandrurazvant@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.26.4"
pillow = "^10.2.0"
tritonclient = {extras = ["http"], version = "^2.42.0"}
scipy = "^1.12.0"
docker-compose = "^1.29.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
