[tool.poetry]
name = "video-streaming"
version = "0.1.0"
description = ""
authors = ["razvantalex <alexandrurazvant@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
aiortc = "^1.8.0"
fastapi = "^0.110.3"
opencv-python = "^4.9.0.80"
uvicorn = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
